--- a/TODO
+++ b/TODO
@@ -6,3 +6,11 @@ have a users middleware to know about requesting user! use this:
 https://www.terlici.com/2014/08/25/best-practices-express-structure.html
 use a task runner like gulp if there is some transpilation
 use webpack or similar to pack client side codes
+user authentication and saving the name of annotator and date of annotation in database
+having a header showing the name of authenticated user and maybe some other capabilities and sign out
+change save button to reset button
+remove remove button! add a checkbox for ignore of that image
+consider locking when multi users work on annotation
+toggler selector for annotated and non-annotated images
+Difficulty and Plate-type should be replace with radio buttons to change with just one click
+add project management
