--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@ have a users middleware to know about requesting user! use this:
 https://www.terlici.com/2014/08/25/best-practices-express-structure.html
 use a task runner like gulp if there is some transpilation
 use webpack or similar to pack client side codes
+include db initialization in app.js
+what is a promise in js?
