--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@ change state checking to initial after session expiration
 or on close tab change state checking
 console.logs | console.warns --> logger responsibility!
 add double checking service with a annotator field in plate and use session info to retrieve annotator's annotated plates
+if number of plates < number of parallel annotators --> server error!
